# ib-matcher

./: README.md
.github/workflows/: build.yml
ib-matcher/: Cargo.toml  README.md
ib-matcher/benches/: ascii.rs
ib-matcher/benches/regex/: ascii.rs  lita.rs
ib-matcher/examples/: basic.rs
ib-matcher/src/: lib.rs  minimal.rs
ib-matcher/src/matcher/: ascii.rs  config.rs  input.rs  matches.rs  mod.rs  pinyin.rs  romaji.rs
ib-matcher/src/minimal/: flags.rs
ib-matcher/src/pinyin/: mod.rs  notation.rs
ib-matcher/src/regex/: backtrack.rs  mod.rs  nfa.rs
ib-matcher/src/regex/cp/: mod.rs  regex.rs
ib-matcher/src/regex/lita/: mod.rs  regex.rs
ib-matcher/src/regex/nfa/: backtrack.rs  mod.rs
ib-matcher/src/regex/syntax/: fold.rs  mod.rs
ib-matcher/src/regex/util/: mod.rs
ib-matcher/src/syntax/: ev.rs  glob.rs  mod.rs
ib-matcher/src/syntax/glob/: mod.rs  util.rs
ib-matcher/src/syntax/regex/: mod.rs
ib-matcher/src/syntax/regex/hir/: mod.rs
ib-pinyin/: Cargo.toml  README.md
ib-pinyin/bindings/ahk2/: README.md  example.ahk
ib-pinyin/bindings/ahk2/Lib/: IbPinyin.ahk
ib-pinyin/bindings/c/src/: lib.rs
ib-pinyin/src/: lib.rs  minimal.rs
ib-romaji/: Cargo.toml
ib-romaji/src/: cache.rs  kana.rs  lib.rs
ib-romaji/src/data/: kanjis.rs  word_kanas.rs  words.in.txt
ib-unicode/: Cargo.toml  README.md
ib-unicode/src/: ascii.rs  lib.rs
ib-unicode/src/case/: mod.rs
ib-unicode/src/case/fold/: map.rs
